Application User that derived from identity user was created and ApplicationDBContext was also created. EntityFrameWork added.

--- a/Collections.Web/appsettings.json
+++ b/Collections.Web/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-5ROIMS8\\SQLEXPRESS;Database=CollectionsDb;Trusted_Connection=True;Encrypt=True;TrustServerCertificate=True",
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
