Web Site Default role was created by DbInitializer file.

--- a/Collections.Web/Collections.Web.csproj
+++ b/Collections.Web/Collections.Web.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Collections.Repository\Collections.Repository.csproj" />
+    <ProjectReference Include="..\Collections.Utilities\Collections.Utilities.csproj" />
   </ItemGroup>
 
 </Project>
