ApplicationUserServices, ApplicationRoleServices are creatwd and ApplicationUserViewModel, ApplicationRoleViewModel are created

--- a/Collections.Services/Collections.Services.csproj
+++ b/Collections.Services/Collections.Services.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Collections.Utilities\Collections.Utilities.csproj" />
+    <ProjectReference Include="..\Collections.ViewModel\Collections.ViewModel.csproj" />
+  </ItemGroup>
+
 </Project>
