--- a/Collections.ViewModel/Collections.ViewModel.csproj
+++ b/Collections.ViewModel/Collections.ViewModel.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Collections.Models\Collections.Models.csproj" />
+  </ItemGroup>
+
 </Project>
