--- a/Collections.Web/appsettings.json
+++ b/Collections.Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-5ROIMS8\\SQLEXPRESS;Database=CollectionsDb;Trusted_Connection=True;Encrypt=True;TrustServerCertificate=True",
+    "DefaultConnection": "Server=DESKTOP-5ROIMS8\\SQLEXPRESS;Database=CollectionsDb;Trusted_Connection=True;Encrypt=True;TrustServerCertificate=True; MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
