--- a/Collections.Web/Collections.Web.csproj
+++ b/Collections.Web/Collections.Web.csproj
@@ -15,7 +15,9 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Collections.Repository\Collections.Repository.csproj" />
+    <ProjectReference Include="..\Collections.Services\Collections.Services.csproj" />
     <ProjectReference Include="..\Collections.Utilities\Collections.Utilities.csproj" />
+    <ProjectReference Include="..\Collections.ViewModel\Collections.ViewModel.csproj" />
   </ItemGroup>
 
 </Project>
